--- a/ptg/index.html
+++ b/ptg/index.html
@@ -1,3 +1,6 @@
 ---
-redirect_to: 'https://twitter.com'
+layout: redirected
+sitemap: false
+permalink: /ptg/
+redirect_to:  'https://twitter.com'
 ---
