--- a/ptg/index.html
+++ b/ptg/index.html
@@ -1,6 +1,4 @@
 ---
-layout: redirected
-sitemap: false
 permalink: /ptg/
-redirect_to:  'https://twitter.com'
+redirect_to:  'https://twitter.com/:uuid'
 ---
