--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 ---
-redirect_to:  "https://github.com/"
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+
+layout: home
+redirect_to : "https://github.com/ryo350/tslint"
 ---
