--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Github Pages Rewrite</title>
+    <title>Contact | Github Pages Rewrite</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Github Pages Rewrite</h1>
-<h2>Top</h2>
+<h2>Contact</h2>
 <nav>
     <ul>
         <li><a href="/ghp-rewrite">TOP</a></li>
@@ -18,12 +18,8 @@
     </ul>
 </nav>
 <ol>
-    <li>TOP<li>
+    <li class="linked"><a href="/ghp-rewrite">Top</a><li>
+    <li>Contact</li>
 </ol>
-<ul>
-    <li><a href="/ghp-rewrite/post/hello-world">Hello, World!</a></li>
-    <li><a href="/ghp-rewrite/post/you-can-rewrite">You can rewrite!</a></li>
-    <li><a href="/ghp-rewrite/post/23">23</a></li>
-</ul>
 </body>
 </html>
