--- a/post.html
+++ b/post.html
@@ -37,13 +37,13 @@
 <h2><script>document.write(parameter_value);</script></h2>
 <nav>
     <ul>
-        <li><a href="/ghp-rewrite">TOP</a></li>
-        <li><a href="/ghp-rewrite/about">About</a></li>
-        <li><a href="/ghp-rewrite/contact">Contact</a></li>
+        <li><a href="/gh-pages">TOP</a></li>
+        <li><a href="/gh-pages/about">About</a></li>
+        <li><a href="/gh-pages/contact">Contact</a></li>
     </ul>
 </nav>
 <ol>
-    <li class="linked"><a href="/ghp-rewrite">Top</a><li>
+    <li class="linked"><a href="/gh-pages">Top</a><li>
     <li><script>document.write(parameter_value);</script></li>
 </ol>
 <h3>permalink</h3>
@@ -51,9 +51,9 @@
     /post.html?post_id=<script>document.write(parameter_value);</script> → /post/<script>document.write(parameter_value);</script>
 </p>
 <ul>
-    <li><a href="/ghp-rewrite/post/hello-world">Hello, World!</a></li>
-    <li><a href="/ghp-rewrite/post/you-can-rewrite">You can rewrite!</a></li>
-    <li><a href="/ghp-rewrite/post/23">23</a></li>
+    <li><a href="/gh-pages/post/hello-world">Hello, World!</a></li>
+    <li><a href="/gh-pages/post/you-can-rewrite">You can rewrite!</a></li>
+    <li><a href="/gh-pages/post/23">23</a></li>
 </ul>
 </body>
 </html>
