--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,13 @@
 <h2>Contact</h2>
 <nav>
     <ul>
-        <li><a href="/ghp-rewrite">TOP</a></li>
-        <li><a href="/ghp-rewrite/about">About</a></li>
-        <li><a href="/ghp-rewrite/contact">Contact</a></li>
+        <li><a href="/gh-pages">TOP</a></li>
+        <li><a href="/gh-pages/about">About</a></li>
+        <li><a href="/gh-pages/contact">Contact</a></li>
     </ul>
 </nav>
 <ol>
-    <li class="linked"><a href="/ghp-rewrite">Top</a><li>
+    <li class="linked"><a href="/gh-pages">Top</a><li>
     <li>Contact</li>
 </ol>
 </body>
