--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <h2>Top</h2>
 <nav>
     <ul>
-        <li><a href="/ghp-rewrite">TOP</a></li>
-        <li><a href="/ghp-rewrite/about">About</a></li>
-        <li><a href="/ghp-rewrite/contact">Contact</a></li>
+        <li><a href="/gh-pages">TOP</a></li>
+        <li><a href="/gh-pages/about">About</a></li>
+        <li><a href="/gh-pages/contact">Contact</a></li>
     </ul>
 </nav>
 <ol>
     <li>TOP<li>
 </ol>
 <ul>
-    <li><a href="/ghp-rewrite/post/hello-world">Hello, World!</a></li>
-    <li><a href="/ghp-rewrite/post/you-can-rewrite">You can rewrite!</a></li>
-    <li><a href="/ghp-rewrite/post/23">23</a></li>
+    <li><a href="/gh-pages/post/hello-world">Hello, World!</a></li>
+    <li><a href="/gh-pages/post/you-can-rewrite">You can rewrite!</a></li>
+    <li><a href="/gh-pages/post/23">23</a></li>
 </ul>
 </body>
 </html>
