--- a/404.html
+++ b/404.html
@@ -30,6 +30,7 @@
 		var match_condition = new RegExp(redirect_file_name.replace('.html', '') + '/[a-z0-9-_]+$');
 		if (permalink = path_name.match(match_condition))
 		{
+			console.log(permalink[0]);
 			location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
 		}
 
