--- a/404.html
+++ b/404.html
@@ -33,7 +33,8 @@
 			console.log("----------");
 			console.log(permalink[0]);
 			console.log("----------");
-			location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
+			// location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
+			location.href = 'https://github.com/ryo350/argo/' + permalink[0];
 		}
 
     </script>
