--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 			console.log(permalink[0]);
 			console.log("----------");
 			// location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
-			location.href = 'https://github.com/ryo350/argo/' + permalink[0];
+			location.href = "https://github.com/"
 		}
 
     </script>
