--- a/404.html
+++ b/404.html
@@ -22,20 +22,20 @@
 		var path_name = window.location.pathname;
 
         console.log(path_name);
-
+		location.href = "https://github.com/"
 		/*
          * Process
          * (Redirect)
          */
-		var match_condition = new RegExp(redirect_file_name.replace('.html', '') + '/[a-z0-9-_]+$');
-		if (permalink = path_name.match(match_condition))
-		{
-			console.log("----------");
-			console.log(permalink[0]);
-			console.log("----------");
-			// location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
-			location.href = "https://github.com/"
-		}
+		// var match_condition = new RegExp(redirect_file_name.replace('.html', '') + '/[a-z0-9-_]+$');
+		// if (permalink = path_name.match(match_condition))
+		// {
+		// 	console.log("----------");
+		// 	console.log(permalink[0]);
+		// 	console.log("----------");
+		// 	// location.href = path_name.replace(permalink, '') + redirect_file_name + '?' + parameter_key + '=' + permalink[0].replace(/post\//, '');
+		// 	location.href = "https://github.com/"
+		// }
 
     </script>
 </head>
