--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 		var path_name = window.location.pathname;
 
         console.log(path_name);
-		location.href = "https://github.com/"
+		location.href = "https://github.com/" + path_name;
 		/*
          * Process
          * (Redirect)
