--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 		var path_name = window.location.pathname;
 		var permalink = path_name.split('/');
 
-		location.href = "https://github.com/" + permalink[0];
+		location.href = "https://github.com/ryo350/" + permalink[1];
 		/*
          * Process
          * (Redirect)
