--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
          */
 		var path_name = window.location.pathname;
 		var permalink = path_name.split('/');
-		console.log(permalink);
+		alert(permalink);
 
 		location.href = "https://github.com/ryo350/" + permalink[3];
 		/*
