--- a/404.html
+++ b/404.html
@@ -21,10 +21,10 @@
          */
 		var path_name = window.location.pathname;
 		var permalink = path_name.split('/');
-		alert(permalink[1]);
-		alert(permalink[2]);
-        alert(permalink[3]);
-		location.href = "https://github.com/ryo350/" + permalink[3];
+		// alert(permalink[1]);
+		// alert(permalink[2]);
+        // alert(permalink[3]);
+		location.href = "https://github.com/ryo350/" + permalink[2];
 		/*
          * Process
          * (Redirect)
