--- a/404.html
+++ b/404.html
@@ -24,6 +24,7 @@
 		// alert(permalink[1]);
 		// alert(permalink[2]);
         // alert(permalink[3]);
+        alert(permalink[2]);
 		location.href = "https://github.com/ryo350/" + permalink[2];
 		/*
          * Process
