--- a/appraisal_details/index.html
+++ b/appraisal_details/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Github Pages Rewrite</title>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <title>appraisal details</title>
     <script>
 		function getParam(name, url) {
 			if (!url) url = window.location.href;
@@ -21,8 +16,5 @@
 		location.href = "https://github.com/ryo350/" +uuid;
     </script>
 </head>
-<body>
-<h1>Redirect</h1>
-<h2>....</h2>
-</body>
+<body></body>
 </html>
