--- a/appraisal_details/index.html
+++ b/appraisal_details/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>appraisal details</title>
     <script>
-		function getParam(name, url) {
-			if (!url) url = window.location.href;
+		function getParam(name) {
+			var url = window.location.href;
 			name = name.replace(/[\[\]]/g, "\\$&");
 			var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
 				results = regex.exec(url);
@@ -12,9 +12,8 @@
 			if (!results[2]) return '';
 			return decodeURIComponent(results[2].replace(/\+/g, " "));
 		}
-		var uuid = getParam('uuid');
-		location.href = "https://github.com/ryo350/" +uuid;
+		var key = getParam('key');
+		location.href = "https://github.com/ryo350/" +key;
     </script>
 </head>
-<body></body>
 </html>
